[gd_scene load_steps=10 format=3 uid="uid://bm4p4xqu2nr51"]

[ext_resource type="Script" path="res://scripts/overworld/SmashLight.gd" id="1_im2bc"]
[ext_resource type="Texture2D" uid="uid://c6el3adthjgj5" path="res://sprites/UI/guage_bar.png" id="2_h4oow"]
[ext_resource type="Texture2D" uid="uid://3yrxjkc702kb" path="res://sprites/UI/guage_left.png" id="3_itgbx"]
[ext_resource type="Texture2D" uid="uid://d1ingeefe1wb0" path="res://sprites/UI/guage_right.png" id="4_85d0v"]
[ext_resource type="Texture2D" uid="uid://y65ceq1atdg0" path="res://sprites/UI/guage_ok.png" id="5_soxd1"]
[ext_resource type="Texture2D" uid="uid://bti7bdlyhjkk2" path="res://sprites/UI/guage_good.png" id="6_owtar"]
[ext_resource type="Texture2D" uid="uid://dvvrbkuwq6oxx" path="res://sprites/UI/guage_bad.png" id="7_xwxl5"]

[sub_resource type="Gradient" id="Gradient_mr3xf"]
colors = PackedColorArray(1, 1, 1, 0.498039, 1, 1, 1, 0.478431)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6qjo7"]
gradient = SubResource("Gradient_mr3xf")

[node name="SmashLight" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 269.0
offset_bottom = 58.0
script = ExtResource("1_im2bc")

[node name="Base" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="TextureRect" parent="Base"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.041
anchor_top = 0.5
anchor_right = 0.785
anchor_bottom = 0.868
offset_left = -0.168
offset_right = 0.319992
offset_bottom = 1.656
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h4oow")

[node name="Slider" type="TextureRect" parent="Base/ProgressBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -101.87
offset_bottom = 0.0960007
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_6qjo7")
expand_mode = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Base"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.75
anchor_bottom = 1.0
grow_vertical = 2
texture = ExtResource("3_itgbx")

[node name="Result" type="TextureRect" parent="Base"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4_85d0v")

[node name="ResultOK" type="TextureRect" parent="Base/Result"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.479
anchor_right = 0.5
offset_left = -19.9755
offset_top = -40.0
offset_right = 18.25
texture = ExtResource("5_soxd1")

[node name="ResultGood" type="TextureRect" parent="Base/Result"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211
anchor_top = 0.122
anchor_right = 0.766
anchor_bottom = 0.818
offset_left = 0.0146408
offset_top = -3.052
offset_right = 1.96784
offset_bottom = 2.012
texture = ExtResource("6_owtar")

[node name="ResultBad" type="TextureRect" parent="Base/Result"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211
anchor_top = 0.122
anchor_right = 0.766
anchor_bottom = 0.818
offset_left = 0.0146408
offset_top = -3.052
offset_right = 1.96784
offset_bottom = 2.012
texture = ExtResource("7_xwxl5")
